document 부분 추가, 02_blink-led.py 포트 변경

--- a/01_documents/001_준비 사항.md
+++ b/01_documents/001_준비 사항.md
@@ -1,9 +1,21 @@
-= 준비물 =
-1. micro SD
-2. micro SD to SD Adapter
-3. 카드 리더기
-4. 노트북
-5. Virtualbox
-6. 라즈베리파이 3
-7. micro USB 케이블
+# IoT Hands-on-lab 실습을 위한 준비
+본격적인 IoT 실습에 앞서 아래의 사항들을 확인하고 준비합니다.
 
+## 준비물
+본 실습을 진행하기 위해서는 아래와 같은 준비물이 필요합니다.
+1. micro SD (8 ~ 32GB 권장)
+2. micro SD to SD Adapter 혹은 micro SD 카드 리더기
+3. 노트북 (OS 상관 없음)
+4. Virtualbox와 Extension Pack
+5. 라즈베리파이 2 혹은 3
+6. GrovePi (브레드보드 대용)
+7. micro USB 케이블(라즈베리파이에 전원 공급, 일반 스마트폰 충전 케이블이면 됩니다.)
+8. Microsoft Azure 무료 이용 등록 혹은 Azure Pass
+
+## 실습을 위한 프로그램 혹은 파일 다운로드
+실습을 진행하기 위한 프로그램을 아래에서 다운로드 받습니다.
+1. Virtualbox + Extension Pack
+2. Raspbian OS (raspbian 공식 사이트가 아닌 제공해 드린 파일을 다운로드 하십시오.)
+3. IoT_Hands-on_vm.ova 파일
+4. Win32 Disk Imager (Mac OS, Linux 계열은 필요하지 않습니다.)
+5. (Windows, Linux 계열은 필요하지 않습니다.)
