PPT 제외 실습 부분 보강 및 추가

--- a/01_documents/101_준비 사항.md
+++ b/01_documents/101_준비 사항.md
@@ -14,8 +14,8 @@
 
 ## 실습을 위한 프로그램 혹은 파일 다운로드
 실습을 진행하기 위한 프로그램을 아래에서 다운로드 받습니다.
-1. Virtualbox + Extension Pack
-2. Raspbian OS (raspbian 공식 사이트가 아닌 제공해 드린 파일을 다운로드 하십시오.)
-3. IoT_Hands-on_vm.ova 파일
-4. Win32 Disk Imager (Mac OS, Linux 계열은 필요하지 않습니다.)
-5. (Windows, Linux 계열은 필요하지 않습니다.)
+1. [Virtualbox + Extension Pack](https://www.virtualbox.org/wiki/Downloads) (다운로드 후 설치하여 주십시오.)
+2. [Raspbian OS](http://bit.ly/2ox9kgo) (다운로드 후 압축을 풀어 주십시오.)
+3. [IoT_Hands-on_vm.ova 파일](http://bit.ly/2okusWT) (2017년 4월 8일까지 제공하며, 이후는 컴파일 방법을 참조하여 주십시오.)
+4. [Win32 Disk Imager](http://bit.ly/1UF6LFU) (다운로드 후 설치하여 주십시오. Mac OS, Linux 계열은 필요하지 않습니다.)
+5. [Etcher](http://bit.ly/2nO10dE) (다운로드 후 설치하여 주십시오. Windows, Linux 계열은 필요하지 않습니다.)
