--- a/01_documents/301_실습-vm-가져오기.md
+++ b/01_documents/301_실습-vm-가져오기.md
@@ -1,4 +1,8 @@
 # 가상의 IoT 장치를 만들어 데이터 송수신 하기
+아래와 같이 여러 목적으로 가상의 IoT 장치를 생성하여 개발 및 테스트를 진행할 수 있습니다.
+1. Dummy Data를 만들어 빠르게 구조나 시나리오를 구축하고 싶은 경우
+2. 라즈베리파이 등 IoT 장치가 없을 경우
+3. 내부 인터넷 등의 문제로 인하여 장치에 연결할 수 없을 경우
 
 ## 준비 된 vm 가져오기
 1. https://www.virtualbox.org/wiki/Downloads 에서 Virtualbox 및 VirtualBox Extension Pack을 설치합니다.
